--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <hr>
         <ul>
             <li>Born: December 10, 1815, London, United Kingdom as Augusta Ada Byron</li>
-            <li>She was a Mathematician.</li>
+            <li>She was a mathematician and writer.</li>
             <li>She was an associate of Charles Babbage and his work on the Analytical Engine. In her work she explained
                 that the machine could do more than calculate - it could follow patterns or codes.</li>
             <li>Died: November 27, 1852, Marylebone, London, United Kingdom</li>
@@ -31,8 +31,8 @@
         </ul>
         <hr>
 
-        <p>If you'd like to learn a bit more about Ada, check out this <a id="tribute-link" href=""
-                target="_blank">video</a>. </p>
+        <p id="para-link">If you'd like to learn a bit more about Ada, check out this <a id="tribute-link"
+                href="https://youtu.be/J7ITqnEmf-g" target="_blank">video</a>. </p>
 
     </main>
 </body>
